add connection string to development json

--- a/Planner.API/appsettings.Development.json
+++ b/Planner.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:kalibek-test-server.database.windows.net,1433;Initial Catalog=Planner;Persist Security Info=False;User ID=kalibek;Password=!CthdthysqCthdth7;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
