change cors to all

--- a/Planner.API/appsettings.json
+++ b/Planner.API/appsettings.json
@@ -9,7 +9,7 @@
     //"Key": "MySuperSecretKey85692232",
     "ExpiryInMinutes": 120
   },
-  "AllowedHosts": "https://planner.akas.kz;https://localhost:5001",
+  "AllowedHosts": "*",
   "Serilog": {
     "Using": [],
     "MinimumLevel": {
